tests/any/any.exp
Error -------------------------------------------------------------- any.js:8:16

Error: any.js:8
  8: var y:string = bar(0);
                    ^^^^^^ Cannot assign `bar(...)` to `y` because mixed [1] is incompatible with string [2].
  References:
    4: function bar(x:any):mixed { return x; }
                           ^^^^^ [1]: mixed
    8: var y:string = bar(0);
             ^^^^^^ [2]: string

Error ------------------------------------------------------- flowfixme.js:14:27

Error: flowfixme.js:14
 14: function baz(x:$FlowFixMe<nnumber>): $FlowFixMe<number> { return x; }
                               ^^^^^^^ Cannot resolve name `nnumber`.

Error ------------------------------------------------------- flowfixme.js:17:16

Error: flowfixme.js:17
 17: var y:string = bar(0);
                    ^^^^^^ Cannot assign `bar(...)` to `y` because mixed [1] is incompatible with string [2].
  References:
   10: function bar(x:$FlowFixMe):mixed { return x; }
                                  ^^^^^ [1]: mixed
   17: var y:string = bar(0);
             ^^^^^^ [2]: string

Error ------------------------------------------------------- flowissue.js:14:27

Error: flowissue.js:14
 14: function baz(x:$FlowIssue<nnumber>): $FlowIssue<number> { return x; }
                               ^^^^^^^ Cannot resolve name `nnumber`.

Error ------------------------------------------------------- flowissue.js:17:16

Error: flowissue.js:17
 17: var y:string = bar(0);
                    ^^^^^^ Cannot assign `bar(...)` to `y` because mixed [1] is incompatible with string [2].
  References:
   10: function bar(x:$FlowIssue):mixed { return x; }
                                  ^^^^^ [1]: mixed
   17: var y:string = bar(0);
             ^^^^^^ [2]: string

Error ------------------------------------------------------- propagate.js:10:10

Error: propagate.js:10
 10:   return c.bar(0, y); // should be able to select first case and error
              ^^^^^^^^^^^ Cannot return `c.bar(...)` because number [1] is incompatible with string [2].
  References:
    4:   bar(n1: number, n2: number): number;
                                      ^^^^^^ [1]: number
    8: function foo(c: C, x: any): string {
                                   ^^^^^^ [2]: string

Error -------------------------------------------------------- propagate.js:16:6

Error: propagate.js:16
 16:     (x: boolean);
          ^ Cannot cast `x` to boolean because mixed [1] is incompatible with boolean [2].
  References:
   14: function bar1(x: mixed) {
                        ^^^^^ [1]: mixed
   16:     (x: boolean);
               ^^^^^^^ [2]: boolean

Error -------------------------------------------------------- propagate.js:23:6

Error: propagate.js:23
 23:     (x: boolean);
          ^ Cannot cast `x` to boolean because mixed [1] is incompatible with boolean [2].
  References:
   21: function bar2(x: mixed) {
                        ^^^^^ [1]: mixed
   23:     (x: boolean);
               ^^^^^^^ [2]: boolean


Found 8 errors
